[project]
name = "packaged-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Usama Tahir", email = "usamatahir8330@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "load-dotenv>=0.1.0",
    "openai>=1.106.1",
    "openai-agents>=0.2.11",
]

[project.scripts]
packaged-agents = "packaged_agents.main:run_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
